--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "postinstall": "bower install"
+    "postinstall": "bower install",
+    "start": "gulp serve"
   }
 }
